# DTS

./: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.command  CLEANUP_BRANCHES.command  COMMIT_MSG.txt  CONTRIBUTING.md  DEMO_ACCOUNTS.md  DEPLOY.md  DOCKER_MINISTRY_DEPLOY.md  DTS_GPS_Hardware_Setup_Guide.docx  DTS_GPS_SIM800_ESP32.docx  DTS_GPS_SIM900_ESP32_MQTT.docx  DTS_Operations_Runbook.docx  DTS_Upgrade_Plan.docx  Dockerfile.prod  FIXES_APPLIED.md  MERGE_TO_MAIN.command  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  Push to GitHub.command  README.md  RESTRUCTURE_REPORT_2026-06-11.md  ROADMAP_100.md  SETUP_BUS_AND_DRIVER.md  Scale_100k_Roadmap.md  docker-compose.prod.yml  docker-compose.scale.yml  dts-repo.bundle  openapi.json  pyproject.toml  requirements.txt  transit_architecture_guide.md  vercel.json
.github/: dependabot.yml  labels.yml  release-please-config.json
api/: __init__.py  index.py  requirements.txt
business/: Benchmark_Report.docx  Revival_Analysis_2026-05-24.docx
db/: RESTORE_RUNBOOK.md  demo_accounts.sql  demo_seed.sql  purge_demo_data.sql  schema.sql  seed.sql  supabase_bootstrap.sql
docs/: APPLY_MIGRATIONS.md  ARCHITECTURE_DECISIONS.md  DEMO_CREDENTIALS.md  FUTURE_WORK.md  MIGRATIONS_WALKTHROUGH.md  MQTT_INGEST.md  SUPABASE_ADVISOR.md  VERCEL_SETUP.md
firmware/: SPEC.md
flutter_app/: ARCHITECTURE.md  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
instructions/: ADMIN_GUIDE.md  DRIVER_GUIDE.md  GPS_TO_APP_ROADMAP.md  HARDWARE_SETUP.md  OPERATOR_GUIDE.md  README.md
mobile/: package.json  (+1 more)
(+222 files in other folders)
